# appimage-desktop-integration

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
build-scripts/: build-appimage.sh  build-deb.sh
external-projects/: libappimage.cmake
external_projects/: libappimage.cmake
pack/: cpack_debs.cmake  create_appimage.sh
res/: res.qrc
src/: CMakeLists.txt
src/config/: CMakeLists.txt  FirstRunConfig.cpp  FirstRunConfig.h  GreeterDialog.cpp  GreeterDialog.h  GreeterDialog.ui  UserAppsMonitorConfig.cpp  UserAppsMonitorConfig.h  main.cpp  org.appimage.desktop-integration-tool.desktop
src/core/: CMakeLists.txt  Deployer.cpp  Deployer.h  Executor.cpp  Executor.h  Registry.cpp  Registry.h  Validator.cpp  Validator.h
src/core/test/: CMakeLists.txt
src/first_run/: CMakeLists.txt  FailureDialog.cpp  FailureDialog.h  FailureDialog.ui  FirstRun.cpp  FirstRun.h  FirstRunUiController.cpp  FirstRunUiController.h  HandleUnsecureAppimageDialog.cpp  HandleUnsecureAppimageDialog.h  HandleUnsecureAppimageDialog.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  main.cpp  org.appimage.first.run.Desktop  org.appimage.first.run.desktop  org.appimage.first_run.desktop
src/first_run/core/: Deployer.cpp  Deployer.h  Executor.cpp  Executor.h  Validator.cpp
src/first_run/gui/: DeploymentDialog.cpp  DeploymentDialog.h  DeploymentDialog.ui  UiController.cpp  UiController.h  UnsecureAppimageDialog.cpp  UnsecureAppimageDialog.h  UnsecureAppimageDialog.ui  ValidationDialog.cpp  ValidationDialog.h  ValidationDialog.ui
src/user_apps_monitor/: CMakeLists.txt  Monitor.cpp  Monitor.h  main.cpp  org.appimage.user_app_monitor.desktop  user_apps_monitor.service.in
src/user_apps_monitor/test/: CMakeLists.txt  TestRegistry.cpp  main.cpp
src/user_apps_monitor/test/data/applications/: appimagekit_e660685f087766d437de39ef24d9d64c-echo.desktop
